# TeamTalkRust

./: .gitignore  AGENTS.md  Cargo.toml  GEMINI.md  README.md
.github/workflows/: ci.yml  publish.yml
crates/teamtalk/: Cargo.toml  README.md
crates/teamtalk-sys/: Cargo.toml  TeamTalk.h  build.rs
crates/teamtalk-sys/src/: lib.rs
crates/teamtalk/examples/: async_event_stream.rs  auto_reconnect.rs  client_manager.rs  connect_login.rs  connection_state.rs  dispatch_handlers.rs  hooks.rs  multi_clients.rs  poll_helpers.rs  record_channel_on_command.rs  record_session.rs  sound_devices.rs  text_echo.rs
crates/teamtalk/src/: async_api.rs  dispatch.rs  events.rs  lib.rs  loader.rs  logging.rs  mock.rs  types.rs
crates/teamtalk/src/client/: audio.rs  channels.rs  connection.rs  core.rs  desktop.rs  encryption.rs  files.rs  hooks.rs  hotkeys.rs  manager.rs  media.rs  mixer.rs  mod.rs  recording.rs  registry.rs  server.rs  system.rs  users.rs  video.rs
crates/teamtalk/src/utils/: backoff.rs  math.rs  mod.rs  strings.rs
crates/teamtalk/tests/: async_tests.rs  dispatch_tests.rs  mock_tests.rs  offline_tests.rs  types_tests.rs  utils_tests.rs
docs/: README.md  changelog.md  configuration.md  developer.md  features.md  getting-started.md
scripts/: build-docs.sh  update-version.ps1  update-version.sh
