[package]
name = "teamtalk"
version = "0.2.3"
edition = "2024"
authors = ["BlindMaster24"]
description = "TeamTalk SDK for Rust"
license = "MIT"
repository = "https://github.com/BlindMaster24/TeamTalkRust"
homepage = "https://github.com/BlindMaster24/TeamTalkRust"

[dependencies]
teamtalk-sys = { version = "0.1.0", path = "../teamtalk-sys" }
thiserror = "2.0"
evalexpr = "13.1"
rand = "0.8"
regex = "1.11"
reqwest = { version = "0.12", features = ["blocking"] }
sevenz-rust2 = "0.19"
dirs = "6.0"
once_cell = "1.20"